--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
-        <!-- <link rel="stylesheet" href="assets/javascript/game.js"> -->
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/reset.css">
         <script src="https://code.jquery.com/jquery.js"></script>
@@ -42,19 +41,19 @@
         </div>
     </div>
         <div class="container3">
-            <span class="score"></span>
-                <span class="record"></span>
+            <span id="scoretarget"></span>
+                <span id="record"></span>
             </div>        
     </div>
 </div>
                 <div class="Crystals">
-                    <span id=“crystal”><img src="assets/images/threecrystals.jpg" alt="Crystal1">
+                    <span class=“crystal1”><img src="assets/images/threecrystals.jpg" alt="Crystal1">
                     </span>
-                        <span id=“crystal”><img src="assets/images/diamond.png" alt="Crystal2">
+                        <span class=“crystal2”><img src="assets/images/diamond.png" alt="Crystal2">
                         </span>
-                            <span id=“crystal”><img src="assets/images/bluecrystals.jpg" alt="Crystal3">
+                            <span class=“crystal3”><img src="assets/images/bluecrystals.jpg" alt="Crystal3">
                             </span>
-                                <span id=“crystal”><img src="assets/images/billycrystal.jpg" alt="Crystal4">
+                                <span class=“crystal4”><img src="assets/images/billycrystal.jpg" alt="Crystal4">
                                 </span>
                 </div>
                 
