--- a/index.html
+++ b/index.html
@@ -40,25 +40,25 @@
             </div>  
         </div>
     </div>
-        <div class="container3">
-            <span id="scoretarget"></span>
-                <span id="record"></span>
+        <div class='container3'>
+            <span id='scoretarget'></span>
+                <span id='record'></span>
             </div>        
     </div>
 </div>
                 <div class="Crystals">
-                    <span class=“crystal1”><img src="assets/images/threecrystals.jpg" alt="Crystal1">
+                    <span ><img src="assets/images/threecrystals.jpg" class='crystal1' alt="crystal-1">
                     </span>
-                        <span class=“crystal2”><img src="assets/images/diamond.png" alt="Crystal2">
+                        <span ><img src="assets/images/diamond.png" class='crystal2' alt="crystal-2">
                         </span>
-                            <span class=“crystal3”><img src="assets/images/bluecrystals.jpg" alt="Crystal3">
+                            <span ><img src="assets/images/bluecrystals.jpg" class='crystal3' alt="crystal-3">
                             </span>
-                                <span class=“crystal4”><img src="assets/images/billycrystal.jpg" alt="Crystal4">
+                                <span ><img src="assets/images/billycrystal.jpg" class='crystal4' alt="crystal-4">
                                 </span>
                 </div>
                 
 
-    <div class="totalscore"></div>  
+    <div class='totalscore'></div>  
         <script src="assets/javascript/game.js" ></script>
     </body>
 </html>
